[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = '2021'
name = 'claims'
version = "1.0.0"
license = "GPL-3.0-only"
homepage = "https://polkadot.network/"
repository = "https://github.com/paritytech/polkadot"
description = "Module to process claims from MIX addresses."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
impl-trait-for-tuples = "0.2.2"
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.193", default-features = false, features = ["alloc"] }
serde_derive = { version = "1.0.117" }
static_assertions = "1.1.0"

sp-api = { version = "25.0.0", default-features = false }
inherents = { package = "sp-inherents", version = "25.0.0", default-features = false }
sp-std = { version = "13.0.0", default-features = false }
sp-io = { version = "29.0.0", default-features = false }
sp-runtime = { version = "30.0.1", default-features = false }
sp-session = { version = "26.0.0", default-features = false }
sp-staking = { version = "25.0.0", default-features = false }
sp-core = { version = "27.0.0", default-features = false }
sp-npos-elections = { version = "25.0.0", default-features = false }

pallet-authorship = { version = "27.0.0", default-features = false }
pallet-balances = { version = "27.0.0", default-features = false }
pallet-fast-unstake = { version = "26.0.0", default-features = false }
pallet-identity = { version = "27.0.0", default-features = false }
pallet-session = { version = "27.0.0", default-features = false }
frame-support = { version = "27.0.0", default-features = false }
pallet-staking = { version = "27.0.0", default-features = false }
pallet-staking-reward-fn = { version = "18.0.0", default-features = false }
frame-system = { version = "27.0.0", default-features = false }
pallet-timestamp = { version = "26.0.0", default-features = false }
pallet-vesting = { version = "27.0.0", default-features = false }
pallet-transaction-payment = { version = "27.0.0", default-features = false }
pallet-treasury = { version = "26.0.0", default-features = false }
pallet-asset-rate = { version = "6.0.0", default-features = false, optional = true }
pallet-election-provider-multi-phase = { version = "26.0.0", default-features = false }
frame-election-provider-support = { version = "27.0.0", default-features = false }

frame-benchmarking = { version = "27.0.0", default-features = false, optional = true }
pallet-babe = { version = "27.0.0", default-features = false, optional = true }

libsecp256k1 = { version = "0.7.0", default-features = false }

[dev-dependencies]
hex-literal = "0.4.1"
pallet-babe = "27.0.0"
pallet-treasury = "26.0.0"
sp-keystore = "0.33.0"
sp-keyring = "30.0.0"
serde_json = "1.0.108"
libsecp256k1 = "0.7.0"

[features]
default = ["std"]
no_std = []
std = [
	"bitvec/std",
	"frame-benchmarking?/std",
	"frame-election-provider-support/std",
	"frame-support/std",
	"frame-system/std",
	"inherents/std",
	"libsecp256k1/std",
	"log/std",
	"pallet-asset-rate?/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-election-provider-multi-phase/std",
	"pallet-fast-unstake/std",
	"pallet-identity/std",
	"pallet-session/std",
	"pallet-staking-reward-fn/std",
	"pallet-staking/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-vesting/std",
	"parity-scale-codec/std",
	"rustc-hex/std",
	"scale-info/std",
	"serde/std",
	"sp-api/std",
	"sp-core/std",
	"sp-io/std",
	"sp-npos-elections/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"libsecp256k1/hmac",
	"libsecp256k1/static-context",
	"pallet-asset-rate/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-election-provider-multi-phase/runtime-benchmarks",
	"pallet-fast-unstake/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-staking/runtime-benchmarks",
]
try-runtime = [
	"frame-election-provider-support/try-runtime",
	# "frame-support-test/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-asset-rate/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-babe?/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-election-provider-multi-phase/try-runtime",
	"pallet-fast-unstake/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-vesting/try-runtime",
	"sp-runtime/try-runtime",
]
